--- a/basic/index.html
+++ b/basic/index.html
@@ -3,15 +3,28 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>js13k</title>
+    <title>js13k2018</title>
     <style>
     html, body {
         background-color: #1b1c33;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        border: 0;
+        overflow: hidden; /*  Disable scrollbars */
+        display: block;  /* No floating content on sides */
     }
+
+    canvas {
+            background-color: #1b1c33
+            display: block;
+            position: absolute;
+        }
+
     </style>
 </head>
 <body>
-    <canvas id="screen" width="240" height="240"></canvas>
+    <canvas id="screen"></canvas>
     <script src="game.js"></script>
 </body>
 </html>
