--- a/mozi/index-dev.html
+++ b/mozi/index-dev.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>JS13K_2018_OFFLINE</title>
+    <title>js13k 2018 Offline</title>
     <style>
     html, body {
         background-color: #f7f7f7;
@@ -65,6 +65,7 @@
 <p class="i1">Unable to connect to the Internet</p>
 <p class="i2">Browser can't display webpage because your computer is not connected to the internet.</p>
 <p class="i3">ERR_JS13K_2018_OFFLINE</p>
+
 </div>
 <script type="text/javascript" src="dev.js"></script>
 </body>
